--- a/package.json
+++ b/package.json
@@ -1,22 +1,55 @@
 {
+  "name": "jayportfolio",
+  "version": "0.1.0",
+  "private": true,
+  "main": "index.js",
   "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "@mui/icons-material": "^5.16.6",
-    "@mui/material": "^5.16.6",
-    "@tsparticles/react": "^3.0.0",
-    "axios": "^1.7.2",
-    "particles.js": "^2.0.0",
-    "rc-progress": "^4.0.0",
-    "react-icons": "^5.1.0",
-    "react-router-dom": "^6.23.0",
-    "react-simple-animate": "^3.5.2",
-    "react-simple-chatbot": "^0.6.1",
-    "react-tsparticles": "^2.12.2",
-    "react-vertical-timeline-component": "^3.6.0",
-    "sass": "^1.76.0",
-    "styled-components": "^4.4.1",
-    "tsparticles": "^3.3.0"
+    "@emotion/react": "11.13.0",
+    "@emotion/styled": "11.13.0",
+    "@fortawesome/fontawesome-free": "6.6.0",
+    "@mui/icons-material": "5.16.6",
+    "@mui/material": "5.16.6",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "1.7.3",
+    "rc-progress": "4.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "5.2.1",
+    "react-router-dom": "6.26.0",
+    "react-scripts": "5.0.1",
+    "react-simple-animate": "3.5.2",
+    "react-simple-chatbot": "0.6.1",
+    "react-tsparticles": "2.12.2",
+    "react-vertical-timeline-component": "3.6.0",
+    "sass": "1.77.8",
+    "styled-components": "4.4.1",
+    "tsparticles": "3.5.0",
+    "web-vitals": "2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
